--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="titulo">
 		<span>Canal</span>
 		<h1>Panda</h1>
-		<p>Desenhado por Mário Monteiro MCM</p>
+		<p>Desenhado por <a href="https://dribbble.com/MCMGeomagic" target="_blank">Mário Monteiro</a></p>
 	</div>
 </body>
 </html>
